--- a/data-raw/dataset_add_ncr_post_hs_education.Rmd
+++ b/data-raw/dataset_add_ncr_post_hs_education.Rmd
@@ -17,15 +17,13 @@ dataset_doi <- readLines(here::here("data/dataset_doi"))[1]
 
 ## Code you used to create dataset - LIST BELOW
 
-Ex: dc_education_training.va_tr_acs_2015_2019_post_hs_education, dc_education_training.va_ct_acs_2015_2019_post_hs_education, dc_education_training.va_hd_acs_2015_2019_post_hs_education: perc_post_hs_edu.RMD
+dc_education_training.ncr_cttr_acs_2010_2019_post_hs_education: perc_post_hs_edu_updated.RMD
 
 
 ```{r data}
 
 # Ex database_table_name: "va_hd_vdoe_2019_2021_3rd_grade_mean_median_read_score"
-table_names = c("va_tr_acs_2015_2019_post_hs_education",
-                "va_ct_acs_2015_2019_post_hs_education",
-                "va_hd_acs_2015_2019_post_hs_education") 
+table_names = c("ncr_cttr_acs_2010_2019_post_hs_education") 
     
 con <- get_db_conn()
 
@@ -46,7 +44,7 @@ if (length(table_names) > 1)
 
 DBI::dbDisconnect(con)
 
-all_geos_file_name <- "va_hdcttr_acs_2015_2019_post_hs_education"  #Ex: "va_vdoe_2019_2021_3rd_grade_mean_median_read_score"
+all_geos_file_name <- "ncr_cttr_acs_2010_2019_post_hs_education"  #Ex: "va_vdoe_2019_2021_3rd_grade_mean_median_read_score"
 assign(all_geos_file_name, all_geos_dat)
 ```
 
