--- a/data-raw/perc_post_hs_edu.Rmd
+++ b/data-raw/perc_post_hs_edu.Rmd
@@ -292,7 +292,7 @@ new_demand$latitude = st_coordinates(new_demand$centroid)[,2]
 supply <- trade_hd_supply
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
@@ -340,7 +340,7 @@ trade_times$origin <- rep(new_demand$health_district, times = dim(supply)[1])
 supply <- two_year_hd_supply
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
@@ -388,7 +388,7 @@ twoyear_times$origin <- rep(new_demand$health_district, times = dim(supply)[1])
 supply <- four_year_hd_supply
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
@@ -801,7 +801,7 @@ supply <- trade_schools %>%
   rename(county = geoid)
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
@@ -850,7 +850,7 @@ supply <- two_year_colleges %>%
   rename(county = geoid)
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
@@ -899,7 +899,7 @@ supply <- four_year_colleges %>%
   rename(county = geoid)
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
@@ -1103,7 +1103,7 @@ def get_tract_geoid(df):
 supply <- py$get_tract_geoid(trade_schools)
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
@@ -1149,7 +1149,7 @@ trade_tr_times$origin <- rep(new_demand$GEOID, times = dim(supply)[1])
 supply <- py$get_tract_geoid(two_year_colleges)
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
@@ -1195,7 +1195,7 @@ two_year_tr_times$origin <- rep(new_demand$GEOID, times = dim(supply)[1])
 supply <- py$get_tract_geoid(four_year_colleges)
 
 # options for OSRM
-options(osrm.server = "http://104.248.112.16:5000/", osrm.profile = "car") # can change option to car, bike, or walk
+options(osrm.server = Sys.getenv("OSRM_SERVER"), osrm.profile = "car") # can change option to car, bike, or walk
 
 # where do we get actual longitude-latitude data for the stores
 start.time <- Sys.time() # using this to see run-time
